welcome.lessons.welcome.array.has271.Has271.scala.code
def has271(nums:Array[Int]): Boolean = {
  for (compteur <- 2 to nums.lenght -1){
    if (nums(l)==nums(l-2)-1 && nums(l)==nums(l-1)+5){
      return true
    }
  }
  return false
}